--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
-        font-family: 'Inter', sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
-      @import url('https://rsms.me/inter/inter.css');
     </style>
   <script type="importmap">
 {
@@ -26,7 +24,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-900 text-gray-300">
+  <body class="bg-[#030712] text-gray-100">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
